--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <script type="text/x-handlebars">
 
-  <div class="main">
+
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -44,7 +44,7 @@
     </div>
 
     {{outlet}}
-  </div>
+
   </script>
 
   <script type="text/x-handlebars" id="posts">
@@ -59,9 +59,7 @@
             </thead>
             {{#each}}
             <tr><td>
-              {{#link-to 'post' this}}
-              {{title}} <small class='muted'>by {{author.name}}</small>
-              {{/link-to}}
+              {{#link-to 'post' this}}{{title}} <small class='muted'>by {{author.name}}</small>{{/link-to}}
             </tr></td>
             {{/each}}
           </table>
@@ -70,33 +68,34 @@
         {{outlet}}
         </div>
       </div>
-
+     </div>
   </div>
   </script>
 
-  <script type="text/x-handlebars" id="post">
+<script type="text/x-handlebars" id="posts/index">
+    <p class="text-warning">Please select a post</p>
+</script>
 
-  {{#if isEditing}}
-    {{partial 'post/edit'}}
-    <button {{action 'doneEditing'}}>Done</button>
-  {{else}}
-    <button {{action 'edit'}}>Edit</button>
+  <script type="text/x-handlebars" id="post">
+    {{#if isEditing}}
+      {{partial 'post/edit'}}
+      <button {{action 'doneEditing'}}>Done</button>
+    {{else}}
+      <button {{action 'edit'}}>Edit</button>
     {{/if}}
 
-  <h1>{{title}}</h1>
-    <h2>by {{author.name}} <small class="muted">({{fuck date}})</small></h2>
-    {{log date}}
+    <h1>{{title}}</h1>
+    <h2>by {{author.name}} <small class='muted'>({{fuck date}})</small></h2>
+
     <hr>
 
     <div class='intro'>
       {{damn excerpt}}
     </div>
 
-    <div class="below-the-fold">
+    <div class='below-the-fold'>
       {{damn body}}
     </div>
-
-
   </script>
 
   <script type="text/x-handlebars" id="post/_edit">
@@ -135,13 +134,11 @@
     </div>
   </script>
 
-  <script src="js/libs/jquery-1.10.2.js"></script>
-  <script src="js/libs/handlebars-1.1.2.js"></script>
-  <script src="js/libs/ember-1.7.0.js"></script>
-  <script src="js/libs/showdown.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.3/moment.min.js" type="text/javascript" charset="utf-8" async defer></script>
+   <script src="js/libs/jquery-v1.11.1.js"></script>
+  <script src="js/libs/handlebars-v1.3.0.js"></script>
+  <script src="js/libs/ember-v1.6.1.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.1.0/moment.min.js"></script>
   <script src="js/app.js"></script>
-  <!-- to activate the test runner, add the "?test" query string parameter -->
-  <script src="tests/runner.js"></script>
 </body>
 </html>
